--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
