--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "cleanUrls": true,
     "trailingSlash": false,
-    "routes": [
-      { "src": "/", "dest": "/" },
-      { "src": "/articles", "dest": "/" },
-      { "src": "/calc-it", "dest": "/" },
-      { "src": "/about-us", "dest": "/" }
+    "rewrites": [
+      { "source": "/", "destination": "/" },
+      { "source": "/articles", "destination": "/" },
+      { "source": "/calc-it", "destination": "/" },
+      { "source": "/about-us", "destination": "/" }
     ]
   }
