--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,25 @@
 {
-    "cleanUrls": true,
-    "trailingSlash": false,
-    "rewrites": [
-      { "source": "/", "destination": "/" },
-      { "source": "/articles", "destination": "/" },
-      { "source": "/calc-it", "destination": "/" },
-      { "source": "/about-us", "destination": "/" }
-    ]
-  }
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "headers": [
+    {
+      "source": "/services/API.js",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    { "source": "/", "destination": "/" },
+    { "source": "/articles", "destination": "/" },
+    { "source": "/calc-it", "destination": "/" },
+    { "source": "/about-us", "destination": "/" }
+  ]
+}
