--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "trailingSlash": false,
     "headers": [
         {
-          "source": "/src/services/(.*)",
+          "source": "/services/(.*)",
           "headers": [
             { "key": "Access-Control-Allow-Credentials", "value": "true" },
             { "key": "Access-Control-Allow-Origin", "value": "*" },
